Added Logo and header

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Responsive Layouts</title>
-  <meta name="description" content="This site will serve as the hub for many sub responsive layouts">
+  <title>Forms</title>
+  <meta name="description" content="This site will serve as example from class Oct1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -24,7 +24,11 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
+  <header>
+   <img class="logo" src="./img/ZebraHead.jpeg" alt="">
+  </header>
+  <h1>Zebra Forms</h1>
+  
   <script src="js/main.js"></script>
 </body>
 
