Added From Action

--- a/index.html
+++ b/index.html
@@ -28,6 +28,43 @@
    <img class="logo" src="./img/ZebraHead.jpeg" alt="">
   </header>
   <h1>Zebra Forms</h1>
+  <p>Zebras are really interesting animals are really interesting animals from Africa</p>
+  <p>Zebras are African equines with distinctive black-and-white striped coats. There are three living species: Grévy's zebra, the plains zebra, and the mountain zebra. Zebras share the genus Equus with horses and asses, the three groups being the only living members of the family Equidae </p>
+  <p>Marty, from the hit movie, "Madagascar" is a zebra who is voiced by Chris Rock. I personally think he is a more interesting and especially funnier than Alex, the main character. He has an identity crisis in the second movie which I relate to persnonally. I think about his quote expressing his anxiety for wondering if he is a zebra with white stripes or black stripes atleast once a week, not sure why. </p>
+
+  <form action="thankyou.html">
+    <div class="container">
+      <h1>Sign Up</h1>
+      <p>Please fill in this form to create an account.</p>
+      <hr>
+  
+      <label for="email"><b>Email</b></label>
+      <input type="text" placeholder="Enter Email" name="email" required>
+  
+      <label for="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+  
+      <label for="psw-repeat"><b>Repeat Password</b></label>
+      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+  
+      <label>
+        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+      </label>
+  
+      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+  
+      <div class="clearfix">
+        <button type="button" class="cancelbtn">Cancel</button>
+        <button type="submit" class="signupbtn">Sign Up</button>
+      </div>
+    </div>
+  </form>
+  
+  
+  
+  
+  
+  
   
   <script src="js/main.js"></script>
 </body>
